<resources>
    <string name="app_name">StrathFund</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="strathfund_logo">StrathFund Logo</string>
    <string name="intro1">Strathfund is a new simple way for Strathmore university students to borrow and lend money amongst themselves.</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dashboard">Dashboard</string>
    <string name="wallet">Wallet</string>
    <string name="my_loans">My Loans</string>
    <string name="lend_money">Lend Money</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="nav_drawer_open">Open Navigation drawer</string>
    <string name="nav_drawer_close">Close Navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
