<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet" />

        <item android:id="@+id/nav_loans"
            android:icon="@drawable/ic_borrow"
            android:title="@string/my_loans" />

        <item android:id="@+id/nav_lend"
            android:icon="@drawable/ic_lend"
            android:title="@string/lend_money" />

        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power"
            android:title="@string/logout" />

    </group>
</menu>